--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -39,8 +39,12 @@
 </button>
   </mat-menu>
 
-  <span>Tienda</span>
-  <span class="justify-items-center"></span>
+  <div class="mb-6 md:mb-0">
+    <a href=" " class="flex items-center">
+        <img src="assets/Mercado no Libre Irregular.png" class="mr-3 h-8" alt="FlowBite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Mercado No Libre</span>
+    </a>
+</div>
 <!-- Buscador -->
 <!-- component -->
 <!-- This is an example component -->
