--- a/src/app/Modules/productos/components/verproducto/verproducto.component.html
+++ b/src/app/Modules/productos/components/verproducto/verproducto.component.html
@@ -1,17 +1,17 @@
-<body class="bg-gray-100">
-	<div class="container mx-auto mt-10">
+
+
 	  <div class="flex shadow-md my-10">
-		<div class="w-3/4 bg-white px-10 py-10">
-		  <div class="flex justify-between border-b pb-8">
-			<h1 class="font-semibold text-2xl">Carrito de compras</h1>
+		<div class="w-3/4 bg-white px-2 py-10">
+		  <div class="">
+			<h1 class="font-semibold text-2xl">Mis productos</h1>
 		  </div>
 		  <div class="flex mt-10 mb-5">
 			<h3 class="font-semibold text-gray-600 text-xs uppercase w-2/5">Detalles de productos</h3>
 			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Cantidad</h3>
 			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Precio</h3>
-			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Total</h3>
+			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Descripcion</h3>
 		  </div>
-		  <div class="flex items-center hover:bg-gray-100 -mx-8 px-6 py-5">
+		  <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
 			<div class="flex w-2/5"> <!-- product -->
 			  <div class="w-20">
 				<img class="h-24" src="https://drive.google.com/uc?id=18KkAVkGFvaGNqPy2DIvTqmUH_nk39o3z" alt="">
@@ -34,7 +34,7 @@
 			<span class="text-center w-1/5 font-semibold text-sm">$400.00</span>
 		  </div>
   
-		  <div class="flex items-center hover:bg-gray-100 -mx-8 px-6 py-5">
+		  <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
 			<div class="flex w-2/5"> <!-- product -->
 			  <div class="w-20">
 				<img class="h-24" src="https://http2.mlstatic.com/D_NQ_NP_616214-MLA44346739570_122020-O.webp" alt="">
@@ -53,11 +53,12 @@
 				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
 				</button> 
 			</div>
-			<span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
-			<span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
-		  </div>
+                <span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
+                <span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
+
+            </div>
   
-		  <div class="flex items-center hover:bg-gray-100 -mx-8 px-6 py-5">
+		  <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
 			<div class="flex w-2/5"> <!-- product -->
 			  <div class="w-20">
 				<img class="h-24" src="https://http2.mlstatic.com/D_NQ_NP_625448-MLM48935694272_012022-O.webp" alt="">
@@ -80,42 +81,17 @@
 			<span class="text-center w-1/5 font-semibold text-sm">$150.00</span>
 		  </div>
   
-		  <a href="#" class="flex font-semibold text-indigo-600 text-sm mt-10">
+		  <a routerLink="" class="flex font-semibold text-indigo-600 text-sm mt-10">
 		
 			<svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"><path d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"/></svg>
-			Continuar comprando
+			Regresar
 		  </a>
 		</div>
   
-		<div id="summary" class="w-1/4 px-8 py-10">
-		  <h1 class="font-semibold text-2xl border-b pb-8">Resumen del pedido</h1>
-		  <div class="flex justify-between mt-10 mb-5">
-			<span class="font-semibold text-sm uppercase">Objetos 3</span>
-			<span class="font-semibold text-sm">590$</span>
-		  </div>
-		  <div>
-			<label class="font-medium inline-block mb-3 text-sm uppercase">Envío</label>
-			<select class="block p-2 text-gray-600 w-full text-sm">
-			  <option>Envío estándar - $10.00</option>
-			</select>
-		  </div>
-		  <div class="py-10">
-			<label for="promo" class="font-semibold inline-block mb-3 text-sm uppercase">
-				Código promocional</label>
-			<input type="text" id="promo" placeholder="Ingresa tu codigo" class="p-2 text-sm w-full">
-		  </div>
-		  <button class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase">Aplicar</button>
-		  <div class="border-t mt-8">
-			<div class="flex font-semibold justify-between py-6 text-sm uppercase">
-			  <span>Total:</span>
-			  <span>$600</span>
-			</div>
-			<button class="bg-indigo-500 font-semibold hover:bg-indigo-600 py-3 text-sm text-white uppercase w-full">Confirmar</button>
-		  </div>
-		</div>
+		
   
 	  </div>
-	</div>
-  </body>
+
+
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
