--- a/src/app/Modules/landing/components/landing/landing.component.css
+++ b/src/app/Modules/landing/components/landing/landing.component.css
@@ -61,8 +61,20 @@ section {
     75%{margin-left: -300%;}
     100%{margin-left: -300%;}
 }
+/*
 @media only screen and (min-width:320px) and (max-width:768px){
 .slider, .slider ul, .slider img{
-    height: 100vh;
+    height: 40vh;
+   
 }
+}*/
+.example-button-row button,
+.example-button-row a {
+  margin-right: 8px;
 }
+
+.example-disabled {
+  display: inline-block;
+}
+
+
