--- a/src/app/Modules/productos/components/verproducto/verproducto.component.html
+++ b/src/app/Modules/productos/components/verproducto/verproducto.component.html
@@ -1,15 +1,15 @@
 
 
-	  <div class="flex shadow-md my-10">
+	  <div class="flex shadow-md">
 		<div class="w-3/4 bg-white px-2 py-10">
 		  <div class="">
 			<h1 class="font-semibold text-2xl">Mis productos</h1>
 		  </div>
 		  <div class="flex mt-10 mb-5">
 			<h3 class="font-semibold text-gray-600 text-xs uppercase w-2/5">Detalles de productos</h3>
-			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Cantidad</h3>
-			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Precio</h3>
-			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/5 text-center">Descripcion</h3>
+			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/2 text-center">Cantidad</h3>
+			<h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/3 text-center">Precio</h3>
+			<h3 class="font-semibold text-justify text-gray-600 text-xs uppercase w-4/5 text-center">Descripcion</h3>
 		  </div>
 		  <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
 			<div class="flex w-2/5"> <!-- product -->
@@ -19,19 +19,14 @@
 			  <div class="flex flex-col justify-between ml-4 flex-grow">
 				<span class="font-bold text-sm">Iphone 6S</span>
 				<span class="text-red-500 text-xs">Apple</span>
-				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
 			  </div>
 			</div>
-			<div class="flex justify-center w-1/5">
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-				</button> 
-				<input class="mx-2 border text-center w-8" type="text" value="1">
-	
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-				</button> 
-			</div>
-			<span class="text-center w-1/5 font-semibold text-sm">$400.00</span>
-			<span class="text-center w-1/5 font-semibold text-sm">$400.00</span>
+			<div class="flex justify-center w-1/2">
+                <span class="font-semibold">1</span>
+              </div>
+			<span class="text-center w-1/3 font-semibold text-sm">$400.00</span>
+			<span class=" text-justify w-4/5  text-sm">El iPhone 6s es un teléfono inteligente de gama alta diseñado por Apple Inc., con procesador de dos núcleos a 1.85 GHz, 2 GB de memoria RAM y pantalla de 4,7 pulgadas.</span>
 		  </div>
   
 		  <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
@@ -42,19 +37,14 @@
 			  <div class="flex flex-col justify-between ml-4 flex-grow">
 				<span class="font-bold text-sm">Xiaomi Mi 20000mAh</span>
 				<span class="text-red-500 text-xs">Xiaomi</span>
-				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
 			  </div>
 			</div>
-			<div class="flex justify-center w-1/5">
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-				</button> 
-				<input class="mx-2 border text-center w-8" type="text" value="1">
-	
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-				</button> 
-			</div>
-                <span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
-                <span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
+			<div class="flex justify-center w-1/2">
+                <span class="font-semibold">1</span>
+              </div>
+                <span class="text-center w-1/3 font-semibold text-sm">$40.00</span>
+                <span class="text-justify text-xs  w-4/5  text-sm">Procesador. Snapdragon® 680Proceso de fabricación de 6 nmCPU: CPU de ocho núcleos, de hasta 2,4 GHzGPU: GPU Qualcomm® Adreno™ 610.</span>
 
             </div>
   
@@ -66,26 +56,28 @@
 			  <div class="flex flex-col justify-between ml-4 flex-grow">
 				<span class="font-bold text-sm">Airpods</span>
 				<span class="text-red-500 text-xs">Apple</span>
-				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Eliminar</a>
+				<a href="#" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
 			  </div>
 			</div>
-			<div class="flex justify-center w-1/5">
-			  <button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-			  </button> 
-			  <input class="mx-2 border text-center w-8" type="text" value="1">
-  
-			  <button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-			  </button> 
+			<div class="flex justify-center w-1/2">
+			  <span class="font-semibold">1</span>
 			</div>
-			<span class="text-center w-1/5 font-semibold text-sm">$150.00</span>
-			<span class="text-center w-1/5 font-semibold text-sm">$150.00</span>
+			<span class="text-center w-1/3 font-semibold text-sm">$150.00</span>
+			<span class="text-justify text-xs  w-4/5  text-sm">¿Qué es lo bueno de los AirPods?
+                Buen sonido, gran cancelación de ruido, ajuste fiable, resistentes al sudor, buena batería. Los AirPods Pro son una opción muy a tener en cuenta si buscas auriculares para correr y hacer deporte de gama alta.</span>
 		  </div>
-  
+       <div class="flex justify-between ">
 		  <a routerLink="" class="flex font-semibold text-indigo-600 text-sm mt-10">
 		
-			<svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"><path d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"/></svg>
+			<svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
 			Regresar
 		  </a>
+
+          <a routerLink="/agregar" class="flex font-semibold text-indigo-600 text-sm mt-10">
+			<svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
+			Agregar
+		  </a>
+        </div>
 		</div>
   
 		
