--- a/src/app/Modules/landing/components/landing/landing.component.html
+++ b/src/app/Modules/landing/components/landing/landing.component.html
@@ -5,7 +5,7 @@
   <div class="w-16 md:w-32 lg:w-48 flex justify-start">
     <a href=" " class="w-16 md:w-32 lg:w-48 flex items-center">
         <img src="assets/Mercado no Libre Irregular.png" class="mr-3 h-8" alt="FlowBite Logo" />
-        <span class="hidden sm:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
+        <span class="hidden md:block self-center  font-semibold text-gray-900 uppercase dark:text-white">Mercado 
           <br>No Libre</span>
     </a>
 </div>
@@ -13,7 +13,7 @@
 
 <form class="flex items-center ">   
   <label for="simple-search" class="sr-only">Search</label>
-  <div class="relative w-full pt-2">
+  <div class="relative w-64 md:flex pt-2">
       <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
           <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
       </div>
@@ -112,7 +112,7 @@
         <span>Administrar</span>
        </button>
        <mat-menu #Administrar="matMenu"> 
-        <button routerLink="/ver" mat-menu-item>Mis Productos</button>
+        <button routerLink="/misproductos" mat-menu-item>Mis Productos</button>
         <button routerLink="/agregar" mat-menu-item>Agregar Producto</button>
        </mat-menu>
        <button class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4"  aria-label="Example icon-button with a menu">
