--- a/src/app/Modules/productos/components/productos/productos.component.html
+++ b/src/app/Modules/productos/components/productos/productos.component.html
@@ -1,22 +1,89 @@
-<div>
-    <button routerLink="/categoria"  type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-      <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-        <!-- Heroicon name: mini/lock-closed -->
-        <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
-        </svg>
-      </span>
-      Categoria
-    </button>
-  </div>
-  <div>
-    <button routerLink="/provedores" type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-      <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-        <!-- Heroicon name: mini/lock-closed -->
-        <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
-        </svg>
-      </span>
-      provedores
-    </button>
-  </div>
+
+
+	  <div class="flex shadow-md">
+      <div class="w-3/4 bg-white px-2 py-10">
+        <div class="">
+        <h1 class="font-semibold text-2xl">Mis productos</h1>
+        </div>
+        <div class="flex mt-10 mb-5">
+        <h3 class="font-semibold text-gray-600 text-xs uppercase w-2/5">Detalles de productos</h3>
+        <h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/2 text-center">Cantidad</h3>
+        <h3 class="font-semibold text-center text-gray-600 text-xs uppercase w-1/3 text-center">Precio</h3>
+        <h3 class="font-semibold text-justify text-gray-600 text-xs uppercase w-4/5 text-center">Descripcion</h3>
+        </div>
+        <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
+        <div class="flex w-2/5"> <!-- product -->
+          <div class="w-20">
+          <img class="h-24" src="https://drive.google.com/uc?id=18KkAVkGFvaGNqPy2DIvTqmUH_nk39o3z" alt="">
+          </div>
+          <div class="flex flex-col justify-between ml-4 flex-grow">
+          <span class="font-bold text-sm">Iphone 6S</span>
+          <span class="text-red-500 text-xs">Apple</span>
+          <a routerLink="/editar" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
+          </div>
+        </div>
+        <div class="flex justify-center w-1/2">
+                  <span class="font-semibold">1</span>
+                </div>
+        <span class="text-center w-1/3 font-semibold text-sm">$400.00</span>
+        <span class=" text-justify w-4/5  text-sm">El iPhone 6s es un teléfono inteligente de gama alta diseñado por Apple Inc., con procesador de dos núcleos a 1.85 GHz, 2 GB de memoria RAM y pantalla de 4,7 pulgadas.</span>
+        </div>
+    
+        <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
+        <div class="flex w-2/5"> <!-- product -->
+          <div class="w-20">
+          <img class="h-24" src="https://http2.mlstatic.com/D_NQ_NP_616214-MLA44346739570_122020-O.webp" alt="">
+          </div>
+          <div class="flex flex-col justify-between ml-4 flex-grow">
+          <span class="font-bold text-sm">Xiaomi Mi 20000mAh</span>
+          <span class="text-red-500 text-xs">Xiaomi</span>
+          <a routerLink="/editar" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
+          </div>
+        </div>
+        <div class="flex justify-center w-1/2">
+                  <span class="font-semibold">1</span>
+                </div>
+                  <span class="text-center w-1/3 font-semibold text-sm">$40.00</span>
+                  <span class="text-justify text-xs  w-4/5  text-sm">Procesador. Snapdragon® 680Proceso de fabricación de 6 nmCPU: CPU de ocho núcleos, de hasta 2,4 GHzGPU: GPU Qualcomm® Adreno™ 610.</span>
+  
+              </div>
+    
+        <div class="flex items-center hover:bg-gray-100 -mx-80 px-80 py-5">
+        <div class="flex w-2/5"> <!-- product -->
+          <div class="w-20">
+          <img class="h-24" src="https://http2.mlstatic.com/D_NQ_NP_625448-MLM48935694272_012022-O.webp" alt="">
+          </div>
+          <div class="flex flex-col justify-between ml-4 flex-grow">
+          <span class="font-bold text-sm">Airpods</span>
+          <span class="text-red-500 text-xs">Apple</span>
+          <a routerLink="/editar" class="font-semibold hover:text-red-500 text-gray-500 text-xs">Editar</a>
+          </div>
+        </div>
+        <div class="flex justify-center w-1/2">
+          <span class="font-semibold">1</span>
+        </div>
+        <span class="text-center w-1/3 font-semibold text-sm">$150.00</span>
+        <span class="text-justify text-xs  w-4/5  text-sm">¿Qué es lo bueno de los AirPods?
+                  Buen sonido, gran cancelación de ruido, ajuste fiable, resistentes al sudor, buena batería. Los AirPods Pro son una opción muy a tener en cuenta si buscas auriculares para correr y hacer deporte de gama alta.</span>
+        </div>
+         <div class="flex justify-between ">
+        <a routerLink="" class="flex font-semibold text-indigo-600 text-sm mt-10">
+      
+        <svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
+        Regresar
+        </a>
+  
+            <a routerLink="/agregar" class="flex font-semibold text-indigo-600 text-sm mt-10">
+        <svg class="fill-current mr-2 text-indigo-600 w-4" viewBox="0 0 448 512"></svg>
+        Agregar
+        </a>
+          </div>
+      </div>
+    
+      
+    
+      </div>
+  
+  
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
